--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,55 +1,47 @@
-# # Run publish-cycle on main commits.
-# #
-# # Publish cycle comprises:
-# # - publish site, coverage reports and API documentation to https://nigeleke.github.io
-# #
-# name: Publish Cycle
+# Run publish-cycle on main commits.
+#
+# Publish cycle comprises:
+# - publish site, coverage reports and API documentation to https://nigeleke.github.io
+#
+name: Publish Cycle
 
-# on:
-#   workflow_run:
-#     workflows: ["Acceptance Cycle"]
-#     branches: [develop]
-#     types:
-#       - completed
+on:
+  workflow_run:
+    workflows: ["Acceptance Cycle"]
+    branches: [develop]
+    types:
+      - completed
 
-# jobs:
-#   publish:
-#     runs-on: ubuntu-latest
+jobs:
+  publish:
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
-#         with:
-#           fetch-depth: 0
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-#       - name: JDK
-#         uses: actions/setup-java@v3
-#         with:
-#           java-version: "17"
-#           distribution: "temurin"
-#           cache: "sbt"
+      - name: Build
+        run: |
+          cargo doc --package style4rs --no-deps
+          cargo install cargo-tarpaulin
+          cargo tarpaulin --out html --output-dir target/doc
+          mkdir docs0
+          mkdir -p docs0/core
+          mkdir -p docs0/coverage
+          cp README.md docs0/
+          cp -R target/doc/style4rs/* docs0/core
+          cp -R target/doc/tarpaulin-report.html docs0/coverage/index.html
 
-#       - name: Build
-#         run: |
-#           sbt clean headerCheck coverage test coverageAggregate doc
-#           mkdir docs0
-#           mkdir -p docs0/core/api
-#           mkdir -p docs0/coverage
-#           cp README.md docs0/
-#           cp -R core/target/scala-3.3.0-RC3/api/* docs0/core/api
-#           cp -R target/scala-2.12/scoverage-report/* docs0/coverage
-
-#       - name: Publish to Codecov
-#         uses: codecov/codecov-action@v3
-
-#       - name: Publish
-#         run: |
-#           git config --global user.email "nigeleke@users.noreply.github.com"
-#           git config --global user.name "Nigel Eke"
-#           export VERSION=$(git describe --abbrev=0 --tags)
-#           git checkout gh-pages
-#           rm -rf docs
-#           mv docs0 docs
-#           git add .
-#           git commit -m "Release $VERSION"
-#           git push
+      - name: Publish
+        run: |
+          git config --global user.email "nigeleke@users.noreply.github.com"
+          git config --global user.name "Nigel Eke"
+          export VERSION=$(git describe --abbrev=0 --tags)
+          git checkout gh-pages
+          rm -rf docs
+          mv docs0 docs
+          git add .
+          git commit -m "Release $VERSION"
+          git push
