--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -48,7 +48,9 @@ jobs:
         run: |
           git config --global user.email "nigeleke@users.noreply.github.com"
           git config --global user.name "Nigel Eke"
-          export VERSION=$(git describe --abbrev=0 --tags)
-          git checkout main
-          git merge $VERSION
-          git push
+          cargo install cargo-release
+          cargo release --no-verify
+# export VERSION=$(git describe --abbrev=0 --tags)
+# git checkout main
+# git merge $VERSION
+# git push
