--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -48,8 +48,11 @@ jobs:
         run: |
           git config --global user.email "nigeleke@users.noreply.github.com"
           git config --global user.name "Nigel Eke"
+          export VERSION=$(cargo metadata --format-version 1 --no-deps | grep -A 2 '"name":"style4rs"' | grep '"version"' | awk '{print $2}' | tr -d '",')
+          echo $VERSION
           cargo install cargo-release
-          cargo release --no-verify
+          cargo release --help
+          cargo release --package style4rs --no-verify
 # export VERSION=$(git describe --abbrev=0 --tags)
 # git checkout main
 # git merge $VERSION
