--- a/style4rs-builder/Cargo.toml
+++ b/style4rs-builder/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 proc-macro2 = { version = "1.0.69", features = ["proc-macro", "span-locations"] }
+style4rs = { path = "../style4rs" }
 style4rs-util = { path = "../style4rs-util" }
 syn = { version = "2.0.39", features = ["full", "visit"] }
 time = { version = "0.3.30", features = ["formatting", "local-offset", "macros"] }
