Add tests invoking Style4rsBuilder

--- a/style4rs-builder/Cargo.toml
+++ b/style4rs-builder/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 
 [dependencies]
 proc-macro2 = { version = "1.0.69", features = ["proc-macro", "span-locations"] }
-style4rs = { path = "../style4rs" }
-style4rs-util = { path = "../style4rs-util" }
+style4rs = { path = "../style4rs", version = "0.1.0" }
+style4rs-util = { path = "../style4rs-util", version = "0.1.0" }
 syn = { version = "2.0.39", features = ["full", "visit"] }
 time = { version = "0.3.30", features = ["formatting", "local-offset", "macros"] }
 walkdir = "2.4.0"
