--- a/style4rs/Cargo.toml
+++ b/style4rs/Cargo.toml
@@ -12,5 +12,5 @@ proc_macro = true
 [dependencies]
 proc-macro2 = { version = "1.0.69", features = ["proc-macro", "span-locations"] }
 quote = "1.0.33"
-style4rs-util = { path = "../style4rs-util" }
+style4rs-util = { path = "../style4rs-util", version = "0.1.0" }
 syn = { version = "2.0.39", features = ["full", "visit"] }
