--- a/style4rs/Cargo.toml
+++ b/style4rs/Cargo.toml
@@ -1,17 +1,18 @@
 [package]
 name = "style4rs"
-version = "0.1.0"
-description = "Scoped CSS for Rust web frameworks like Leptos"
-licence = "MIT"
-repository = "https://github.com/nigeleke/style4rs"
-edition = "2021"
+version.workspace = true
+description.workspace = true
+repository.workspace = true
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
 
 [lib]
 proc_macro = true
 
 [dependencies]
-proc-macro2 = "*"
-quote = "*"
-regex = "*"
+proc-macro2.workspace = true
+quote.workspace = true
+regex.workspace = true
+syn.workspace = true
 style4rs-util = { path = "../style4rs-util", version = "*" }
-syn = "*"
