--- a/style4rs-test/Cargo.toml
+++ b/style4rs-test/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "style4rs-test"
-version = "0.1.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 style4rs = { path = "../style4rs" }
