--- a/style4rs/Cargo.toml
+++ b/style4rs/Cargo.toml
@@ -15,4 +15,4 @@ proc-macro2.workspace = true
 quote.workspace = true
 regex.workspace = true
 syn.workspace = true
-style4rs-util = { path = "../style4rs-util", version = "*" }
+style4rs-util = { path = "../style4rs-util" }
