--- a/crates/style4rs-util/Cargo.toml
+++ b/crates/style4rs-util/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "style4rs-util"
 version.workspace = true
+description = "Commmon functions for style4rs macros and builder"
+repository.workspace = true
+authors.workspace = true
 edition.workspace = true
+license.workspace = true
 
 [dependencies]
 lightningcss = { workspace = true, features = ["visitor"] }
