--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -48,12 +48,7 @@ jobs:
         run: |
           git config --global user.email "nigeleke@users.noreply.github.com"
           git config --global user.name "Nigel Eke"
-          export VERSION=$(cargo metadata --format-version 1 --no-deps | grep -A 2 '"name":"style4rs"' | grep '"version"' | awk '{print $2}' | tr -d '",')
-          git tag $VERSION
           git checkout main
-          git merge $VERSION
-          git push
-
-# cargo install cargo-release
-# cargo release --help
-# cargo release --package style4rs --no-verify
+          git merge develop
+          cargo install cargo-workspaces
+          cargo workspaces version --allow-branch main --pre-id dev- prepatch
