--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -51,4 +51,4 @@ jobs:
           git checkout main
           git merge develop
           cargo install cargo-workspaces
-          cargo workspaces version --allow-branch main --pre-id dev- prepatch
+          cargo workspaces version --allow-branch main --pre-id dev- --yes prepatch
