Add tests for build result of style_sheet!

--- a/crates/style4rs-util/Cargo.toml
+++ b/crates/style4rs-util/Cargo.toml
@@ -10,3 +10,4 @@ license.workspace = true
 [dependencies]
 lightningcss = { workspace = true, features = ["visitor"] }
 proc-macro2.workspace = true
+regex.workspace = true
