--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -43,7 +43,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      # TODO: Bump version using cargo-release ???
       - name: Build
         run: |
           git config --global user.email "nigeleke@users.noreply.github.com"
@@ -51,4 +50,4 @@ jobs:
           git checkout main
           git merge develop
           cargo install cargo-workspaces
-          cargo workspaces version --allow-branch main --pre-id dev- --yes prepatch
+          cargo workspaces version --allow-branch main --yes patch
