Update README and published material

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,15 +24,15 @@ jobs:
 
       - name: Build
         run: |
-          cargo doc --package style4rs --no-deps
+          cargo doc --no-deps
           cargo install cargo-tarpaulin
-          cargo tarpaulin --out html --output-dir target/doc
+          cargo tarpaulin --out html --output-dir target/coverage
           mkdir docs0
-          mkdir -p docs0/core
+          mkdir -p docs0/api
           mkdir -p docs0/coverage
           cp README.md docs0/
-          cp -R target/doc/style4rs/* docs0/core
-          cp -R target/doc/tarpaulin-report.html docs0/coverage/index.html
+          cp -R target/doc/* docs0/api
+          cp -R target/coverage/tarpaulin-report.html docs0/coverage/index.html
           cargo tarpaulin --out xml
 
       - name: Publish to Codecov
