--- a/crates/style4rs-test/Cargo.toml
+++ b/crates/style4rs-test/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "style4rs-test"
-version.workspace = true
+version = "0.0.2"
 description = "Independent tests for macros and builder"
 repository.workspace = true
 authors.workspace = true
