--- a/crates/style4rs-util/Cargo.toml
+++ b/crates/style4rs-util/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "style4rs-util"
-version.workspace = true
+version = "0.0.2"
 description = "Commmon functions for style4rs macros and builder"
 repository.workspace = true
 authors.workspace = true
