--- a/crates/style4rs-macros/Cargo.toml
+++ b/crates/style4rs-macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "style4rs-macros"
-version.workspace = true
+version = "0.0.2"
 description = "Scoped CSS for Rust web frameworks like Leptos"
 repository.workspace = true
 authors.workspace = true
